<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="64dp"
    android:paddingRight="64dp"
    android:paddingTop="16dp"
    android:orientation="vertical"
    tools:context="com.example.claudia.deportesrp.Actualizar_elim_buscar">

    <EditText
        android:id="@+id/Ebuscar"
        android:hint="@string/hintbuscar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/apellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/NNombre"
        android:hint="@string/hintnnombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/NApellido"
        android:hint="@string/hintnapellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/Bbuscar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buscar"/>
    <Button
        android:id="@+id/BEliminar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eliminar"/>
    <Button
        android:id="@+id/BActualizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/actualizar"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Base.DialogWindowTitle.AppCompat"
        android:text="@string/lista"
        android:id="@+id/blista"
        />
    <Button
        style="@style/Animation.AppCompat.Dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lista2"
        android:id="@+id/blista2"
        />

</LinearLayout>
