<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="64dp"
    android:paddingRight="64dp"
    android:paddingTop="16dp"
    android:orientation="vertical"
    tools:context="com.example.claudia.deportesrp.Registro">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Base.DialogWindowTitle.AppCompat"
        android:text="Registro de usuarios"
        android:layout_gravity="center"
        android:textSize="25sp"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:src="@drawable/registro"
        />

    <EditText
        android:id="@+id/nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre" />

        <EditText
            android:id="@+id/apellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/apellido" />

        <EditText
            android:id="@+id/correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correo" />

        <EditText
            android:id="@+id/contrasenia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/contrasenia" />


        <Button
            android:id="@+id/guardar"
            android:layout_width="150dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:background="@drawable/btnguardar"
            />

        <Button
            android:id="@+id/buscar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="Buscar" />


    </LinearLayout>
